exports[`prefer-iterable-in-constructor > invalid(1): const set = new Set();\nfor (const item of items) {\n\tset.add(item);\n} 1`] = `

  1 | const set = new Set();
  2 | for (const item of items) {
  3 | 	set.add(item);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(1): const set = new Set();\nfor (const item of items) {\n\tset.add(item);\n} 2`] = `

Message:
  1 | const set = new Set();
> 2 | for (const item of items) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	set.add(item);
    | ^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`items\` directly to \`new Set()\`.

Output:
  1 | const set = new Set(items);

`;

exports[`prefer-iterable-in-constructor > invalid(1): const set = new Set();\nfor (const item of items)\n\tset.add(item); 1`] = `

  1 | const set = new Set();
  2 | for (const item of items)
  3 | 	set.add(item);

`;

exports[`prefer-iterable-in-constructor > invalid(1): const set = new Set();\nfor (const item of items)\n\tset.add(item); 2`] = `

Message:
  1 | const set = new Set();
> 2 | for (const item of items)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	set.add(item);
    | ^^^^^^^^^^^^^^^ Pass \`items\` directly to \`new Set()\`.

Output:
  1 | const set = new Set(items);

`;

exports[`prefer-iterable-in-constructor > invalid(1): const set = new Set()\nfor (const item of items) {\n\tset.add(item);\n}\n(bar) 1`] = `

  1 | const set = new Set()
  2 | for (const item of items) {
  3 | 	set.add(item);
  4 | }
  5 | (bar)

`;

exports[`prefer-iterable-in-constructor > invalid(1): const set = new Set()\nfor (const item of items) {\n\tset.add(item);\n}\n(bar) 2`] = `

Message:
  1 | const set = new Set()
> 2 | for (const item of items) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	set.add(item);
    | ^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`items\` directly to \`new Set()\`.
  5 | (bar)

Output:
  1 | const set = new Set(items);
  2 | (bar)

`;

exports[`prefer-iterable-in-constructor > invalid(10): const set = new Set();\nfor (const item of (items)) {\n\tset.add(item);\n} 1`] = `

  1 | const set = new Set();
  2 | for (const item of (items)) {
  3 | 	set.add(item);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(10): const set = new Set();\nfor (const item of (items)) {\n\tset.add(item);\n} 2`] = `

Message:
  1 | const set = new Set();
> 2 | for (const item of (items)) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	set.add(item);
    | ^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`items\` directly to \`new Set()\`.

Output:
  1 | const set = new Set((items));

`;

exports[`prefer-iterable-in-constructor > invalid(11): const set = new Set<string>();\nfor (const item of items) {\n\tset.add(item);\n} 1`] = `

  1 | const set = new Set<string>();
  2 | for (const item of items) {
  3 | 	set.add(item);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(11): const set = new Set<string>();\nfor (const item of items) {\n\tset.add(item);\n} 2`] = `

Message:
  1 | const set = new Set<string>();
> 2 | for (const item of items) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	set.add(item);
    | ^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`items\` directly to \`new Set()\`.

Output:
  1 | const set = new Set<string>(items);

`;

exports[`prefer-iterable-in-constructor > invalid(12): new URLSearchParams(Object.entries(record)); 1`] = `

  1 | new URLSearchParams(Object.entries(record));

`;

exports[`prefer-iterable-in-constructor > invalid(12): new URLSearchParams(Object.entries(record)); 2`] = `

Message:
> 1 | new URLSearchParams(Object.entries(record));
    |                     ^^^^^^^^^^^^^^ Pass \`record\` directly to \`new URLSearchParams()\`.

Output:
  1 | new URLSearchParams(record);

`;

exports[`prefer-iterable-in-constructor > invalid(13): new URLSearchParams(Object.entries((record))); 1`] = `

  1 | new URLSearchParams(Object.entries((record)));

`;

exports[`prefer-iterable-in-constructor > invalid(13): new URLSearchParams(Object.entries((record))); 2`] = `

Message:
> 1 | new URLSearchParams(Object.entries((record)));
    |                     ^^^^^^^^^^^^^^ Pass \`record\` directly to \`new URLSearchParams()\`.

Output:
  1 | new URLSearchParams((record));

`;

exports[`prefer-iterable-in-constructor > invalid(2): const set = new Set();\nfor (const item of items) set.add(item);\nfoo(); 1`] = `

  1 | const set = new Set();
  2 | for (const item of items) set.add(item);
  3 | foo();

`;

exports[`prefer-iterable-in-constructor > invalid(2): const set = new Set();\nfor (const item of items) set.add(item);\nfoo(); 2`] = `

Message:
  1 | const set = new Set();
> 2 | for (const item of items) set.add(item);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Pass \`items\` directly to \`new Set()\`.
  3 | foo();

Output:
  1 | const set = new Set(items);
  2 | foo();

`;

exports[`prefer-iterable-in-constructor > invalid(2): const set = new Set()\nfor (const item of items) {\n\tset.add(item);\n}\n[bar] 1`] = `

  1 | const set = new Set()
  2 | for (const item of items) {
  3 | 	set.add(item);
  4 | }
  5 | [bar]

`;

exports[`prefer-iterable-in-constructor > invalid(2): const set = new Set()\nfor (const item of items) {\n\tset.add(item);\n}\n[bar] 2`] = `

Message:
  1 | const set = new Set()
> 2 | for (const item of items) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	set.add(item);
    | ^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`items\` directly to \`new Set()\`.
  5 | [bar]

Output:
  1 | const set = new Set(items);
  2 | [bar]

`;

exports[`prefer-iterable-in-constructor > invalid(2): let set = new Set();\nfor (const item of items) {\n\tset.add(item);\n} 1`] = `

  1 | let set = new Set();
  2 | for (const item of items) {
  3 | 	set.add(item);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(2): let set = new Set();\nfor (const item of items) {\n\tset.add(item);\n} 2`] = `

Message:
  1 | let set = new Set();
> 2 | for (const item of items) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	set.add(item);
    | ^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`items\` directly to \`new Set()\`.

Output:
  1 | let set = new Set(items);

`;

exports[`prefer-iterable-in-constructor > invalid(3): const set = new Set()\nfor (const item of items) {\n\tset.add(item);\n}\nbar() 1`] = `

  1 | const set = new Set()
  2 | for (const item of items) {
  3 | 	set.add(item);
  4 | }
  5 | bar()

`;

exports[`prefer-iterable-in-constructor > invalid(3): const set = new Set()\nfor (const item of items) {\n\tset.add(item);\n}\nbar() 2`] = `

Message:
  1 | const set = new Set()
> 2 | for (const item of items) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	set.add(item);
    | ^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`items\` directly to \`new Set()\`.
  5 | bar()

Output:
  1 | const set = new Set(items)
  2 | bar()

`;

exports[`prefer-iterable-in-constructor > invalid(3): const weakSet = new WeakSet();\nfor (const item of items) {\n\tweakSet.add(item);\n} 1`] = `

  1 | const weakSet = new WeakSet();
  2 | for (const item of items) {
  3 | 	weakSet.add(item);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(3): const weakSet = new WeakSet();\nfor (const item of items) {\n\tweakSet.add(item);\n} 2`] = `

Message:
  1 | const weakSet = new WeakSet();
> 2 | for (const item of items) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	weakSet.add(item);
    | ^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`items\` directly to \`new WeakSet()\`.

Output:
  1 | const weakSet = new WeakSet(items);

`;

exports[`prefer-iterable-in-constructor > invalid(4): const map = new Map();\nfor (const [key, value] of entries) {\n\tmap.set(key, value);\n} 1`] = `

  1 | const map = new Map();
  2 | for (const [key, value] of entries) {
  3 | 	map.set(key, value);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(4): const map = new Map();\nfor (const [key, value] of entries) {\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | const map = new Map();
> 2 | for (const [key, value] of entries) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	map.set(key, value);
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`entries\` directly to \`new Map()\`.

Output:
  1 | const map = new Map(entries);

`;

exports[`prefer-iterable-in-constructor > invalid(5): const map = new Map();\nfor (const [key, value] of Object.entries(record)) {\n\tmap.set(key, value);\n} 1`] = `

  1 | const map = new Map();
  2 | for (const [key, value] of Object.entries(record)) {
  3 | 	map.set(key, value);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(5): const map = new Map();\nfor (const [key, value] of Object.entries(record)) {\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | const map = new Map();
> 2 | for (const [key, value] of Object.entries(record)) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	map.set(key, value);
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`Object.entries(record)\` directly to \`new Map()\`.

Output:
  1 | const map = new Map(Object.entries(record));

`;

exports[`prefer-iterable-in-constructor > invalid(6): const map = new Map();\nfor (const [key, value] of [[\"a\", \"b\"]]) {\n\tmap.set(key, value);\n} 1`] = `

  1 | const map = new Map();
  2 | for (const [key, value] of [["a", "b"]]) {
  3 | 	map.set(key, value);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(6): const map = new Map();\nfor (const [key, value] of [[\"a\", \"b\"]]) {\n\tmap.set(key, value);\n} 2`] = `

Message:
  1 | const map = new Map();
> 2 | for (const [key, value] of [["a", "b"]]) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	map.set(key, value);
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`[["a", "b"]]\` directly to \`new Map()\`.

Output:
  1 | const map = new Map([["a", "b"]]);

`;

exports[`prefer-iterable-in-constructor > invalid(7): const weakMap = new WeakMap();\nfor (const [key, value] of entries) {\n\tweakMap.set(key, value);\n} 1`] = `

  1 | const weakMap = new WeakMap();
  2 | for (const [key, value] of entries) {
  3 | 	weakMap.set(key, value);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(7): const weakMap = new WeakMap();\nfor (const [key, value] of entries) {\n\tweakMap.set(key, value);\n} 2`] = `

Message:
  1 | const weakMap = new WeakMap();
> 2 | for (const [key, value] of entries) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	weakMap.set(key, value);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`entries\` directly to \`new WeakMap()\`.

Output:
  1 | const weakMap = new WeakMap(entries);

`;

exports[`prefer-iterable-in-constructor > invalid(8): const searchParameters = new URLSearchParams();\nfor (const [key, value] of Object.entries(record)) {\n\tsearchParameters.set(key, value);\n} 1`] = `

  1 | const searchParameters = new URLSearchParams();
  2 | for (const [key, value] of Object.entries(record)) {
  3 | 	searchParameters.set(key, value);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(8): const searchParameters = new URLSearchParams();\nfor (const [key, value] of Object.entries(record)) {\n\tsearchParameters.set(key, value);\n} 2`] = `

Message:
  1 | const searchParameters = new URLSearchParams();
> 2 | for (const [key, value] of Object.entries(record)) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	searchParameters.set(key, value);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`record\` directly to \`new URLSearchParams()\`.

Output:
  1 | const searchParameters = new URLSearchParams(record);

`;

exports[`prefer-iterable-in-constructor > invalid(9): const searchParameters = new URLSearchParams();\nfor (const [key, value] of Object.entries(record)) {\n\tsearchParameters.append(key, value);\n} 1`] = `

  1 | const searchParameters = new URLSearchParams();
  2 | for (const [key, value] of Object.entries(record)) {
  3 | 	searchParameters.append(key, value);
  4 | }

`;

exports[`prefer-iterable-in-constructor > invalid(9): const searchParameters = new URLSearchParams();\nfor (const [key, value] of Object.entries(record)) {\n\tsearchParameters.append(key, value);\n} 2`] = `

Message:
  1 | const searchParameters = new URLSearchParams();
> 2 | for (const [key, value] of Object.entries(record)) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	searchParameters.append(key, value);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Pass \`record\` directly to \`new URLSearchParams()\`.

Output:
  1 | const searchParameters = new URLSearchParams(record);

`;
